--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,9 @@
 input[type="range"] {
   -webkit-appearance: none;
   appearance: none;
+  background: #d1d5db;
+  height: 6px;
+  border-radius: 3px;
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -101,4 +104,5 @@ input[type="range"]::-moz-range-thumb {
   cursor: pointer;
   border: 2px solid #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  border: none;
 }
